--- a/zÉbET/zÉbET/ZEBET_verFinal/Main/assets/css/main.css
+++ b/zÉbET/zÉbET/ZEBET_verFinal/Main/assets/css/main.css
@@ -28,7 +28,7 @@ section, summary, time, mark, audio, video {
     
 }
 p{
-    text-align:left;
+    text-align:center;
 }
 Login{
     height:200px;
@@ -187,10 +187,6 @@ a {
     text-decoration: none;
     color: inherit;
     border-bottom: dotted 1px rgba(128, 128, 128, 0.5);
-    -moz-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-    -webkit-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-    -ms-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-    transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
     outline: 0;
 }
 
