--- a/zÉbET/zÉbET/ZEBET_verFinal/Main/assets/css/main.css
+++ b/zÉbET/zÉbET/ZEBET_verFinal/Main/assets/css/main.css
@@ -27,6 +27,11 @@ section, summary, time, mark, audio, video {
    
     
 }
+logout{
+    left:70%;
+    height:50px;
+    width:50px;
+}
 p{
     text-align:center;
 }
@@ -2024,7 +2029,7 @@ button,
     -ms-transition: background-color 0.35s ease-in-out;
     transition: background-color 0.35s ease-in-out;
     width: 30%;
-    left:43%;
+    left:40%;
 }
 .button-top{
     left: 72%;
@@ -2034,6 +2039,8 @@ button,
     width:50%;
     left:32%;
 }
+
+
 
     input[type="button"]:hover,
     input[type="submit"]:hover,
@@ -2714,15 +2721,12 @@ button,
 }
 
 /*REGISTER*/
-form {
-    margin: 0 auto;
-    width: 500px
-}
+
 
 input {
     margin-bottom: 3px;
     padding: 10px;
-    width: 231%;
+    width: 75%;
     border: 1px solid #CCC
 }
 
